# hrlsim-airsim

./: .gitignore  .gitmodules  README.md  calc_inertia_mat.m  launch_sim.sh  lqi.m  settings.json
a/action/: MoveToLocation.action
a/msg/: Multirotor.msg
a/scripts/: test.py
a/scripts/hrlsim/: plotter.py  target.py  team.py  utility.py
api_test/: client1.py  client2.py
catkin_ws/: .gitignore  A.csv
catkin_ws/log/: latest_build
catkin_ws/logs/airsim_ros_cntrl/: build.cmake.000.log.stderr
catkin_ws/logs/airsim_ros_pkgs/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.cmake.002.log.stderr  build.cmake.003.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.008.log.stderr
catkin_ws/logs/teleop_twist_joy/: build.cmake.001.log.stderr
catkin_ws/src/airsim_ros_cntrl/: CMakeLists.txt  package.xml  settings.json
catkin_ws/src/airsim_ros_pkgs/: CMakeLists.txt
ros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ws/log/: latest_build
ros_ws/src/: airsim_interfaces  airsim_ros_pkgs
ros_ws/src/hrlsim/: package.xml  setup.cfg  setup.py
ros_ws/src/hrlsim/hrlsim/: target.py
ros_ws/src/hrlsim/hrlsim/controller/: controller.py  lqr.py
ros_ws/src/hrlsim/hrlsim/drone/: __init__.py  drone.py
ros_ws/src/hrlsim/hrlsim/opt/: optimization.py
ros_ws/src/hrlsim/hrlsim/traj/: minimum_snap.py
ros_ws/src/hrlsim/hrlsim/utility/: utility.py
ros_ws/src/hrlsim_interfaces/: CMakeLists.txt
settings/: 6dronescircle.json
(+201 files in other folders)
