<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hrlsim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="collin.thornton@okstate.edu">cthornton</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>action_msgs</depend>
  <depend>std_msgs</depend>
  <depend>airsim_interfaces</depend>
  <depend>hrlsim_interfaces</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
